# sendo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  launch.ps1  readme.md  release.ps1  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  create_issues.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
apps/site/: package.json  pnpm-lock.yaml  tailwind.config.ts
apps/site/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/site/app/install/: page.tsx
apps/site/components/: feature-grid.tsx  footer-cta.tsx  main-flow.tsx  principles-strip.tsx  screenshot-frame.tsx  section-shell.tsx  site-footer.tsx  site-header.tsx  system-diagram.tsx
apps/site/components/ui/: button.tsx
apps/site/content/: site.ts
apps/site/lib/: releases.ts
apps/tauri/: index.html  package.json  pnpm-lock.yaml
apps/tauri/src/: api.ts  icons.ts  main.ts  state.ts  styles.css  tauri-plugin-global-shortcut.d.ts  types.ts  utils.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: bindings.rs  lib.rs
crates/core/src/config/: mod.rs
crates/core/src/firetv/: mod.rs
crates/core/src/spotify/: mod.rs
docs/: distribution.md
docs/superpowers/specs/: 2026-04-23-sendo-site-design.md  2026-07-14-issue-repair-design.md  2026-07-14-tag-driven-distribution-design.md
scripts/: Build-WindowsRelease.ps1  Publish-GitHubRelease.ps1  Test-ReleaseVersion.ps1
(+7 files in other folders)
