[package]
name = "desk_remote_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rspotify = { version = "0.15.3", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
url = "2"
rand = "0.9"
